# otus-cpp-basics-hw7

./: CMakeLists.txt
test/: list_tests.cpp  vector_tests.cpp
